packages/isar_db/test/errors/index/duplicate_name.dart
// same name

import 'package:isar_db/isar_db.dart';

@collection
class Model {
  late int id;

  @Index(name: 'myindex')
  String? prop1;

  @Index(name: 'myindex')
  String? prop2;
}
